--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.cysharp.r3": "https://github.com/Cysharp/R3.git?path=src/R3.Unity/Assets/R3.Unity",
     "com.unity.addressables": "1.21.21",
     "com.unity.feature.development": "1.0.1",
+    "com.unity.profiling.core": "1.0.2",
     "com.unity.services.ccd.management": "2.2.2",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.ugui": "1.0.0",
