--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,8 +3,11 @@
     "com.cysharp.r3": "https://github.com/Cysharp/R3.git?path=src/R3.Unity/Assets/R3.Unity",
     "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
     "com.unity.addressables": "1.21.21",
+    "com.unity.cinemachine": "2.9.7",
     "com.unity.feature.development": "1.0.1",
+    "com.unity.inputsystem": "1.7.0",
     "com.unity.profiling.core": "1.0.2",
+    "com.unity.render-pipelines.universal": "14.0.10",
     "com.unity.services.ccd.management": "2.2.2",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.ugui": "1.0.0",
